--- a/top.html
+++ b/top.html
@@ -59,7 +59,7 @@
 <body>
   <div class="header">
     <img src="logo.png" alt="Logo" height="50">
-    <h1>Online Book Store</h1>
+    <h1>Ananda Rangapillai Library </h1>
     <h3>Pondicherry University</h3>
   </div>
 
