--- a/right.html
+++ b/right.html
@@ -3,7 +3,6 @@
 <head>
   <title>Right Frame</title>
   <style>
-    /* Full page background with dark overlay */
     body {
       margin: 0;
       padding: 0;
@@ -17,14 +16,13 @@
       position: relative;
     }
 
-    /* Dark overlay for better text visibility */
     body::before {
       content: '';
       position: absolute;
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.6); /* semi-transparent black */
+      background: rgba(0, 0, 0, 0.6);
       z-index: 0;
     }
 
@@ -51,6 +49,21 @@
       line-height: 1.6;
       text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
     }
+
+    .university-link {
+      margin-top: 25px;
+      display: inline-block;
+      font-size: 18px;
+      color: #ffcc00;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    .university-link:hover {
+      color: #ffffff;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -61,6 +74,9 @@
       Use the top menu to <strong>Login</strong>, <strong>Register</strong>, or view your <strong>Cart</strong>. 
       Click on a category to browse your books!
     </p>
+    <a href="https://www.pondiuni.edu.in/" target="_blank" class="university-link">
+      Visit Pondicherry University Website
+    </a>
   </div>
 </body>
 </html>
