--- a/login.html
+++ b/login.html
@@ -7,7 +7,8 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('book.png') no-repeat center center fixed; /* changed to login.png */
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+                  url('book.png') no-repeat center center fixed;
       background-size: cover;
       height: 100vh;
       display: flex;
@@ -16,23 +17,27 @@
     }
 
     .overlay {
-      backdrop-filter: blur(6px);
-      background-color: rgba(255, 255, 255, 0.8);
+      backdrop-filter: blur(10px);
+      background: rgba(255, 255, 255, 0.15);
+      border: 1px solid rgba(255, 255, 255, 0.3);
       padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-      width: 320px;
+      border-radius: 20px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+      width: 340px;
+      color: white;
     }
 
     h2 {
       text-align: center;
-      color: #003366;
+      color: #ffffff;
       margin-bottom: 25px;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
     }
 
     label {
       font-weight: bold;
-      color: #003366;
+      color: #ffffff;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
     }
 
     input[type="text"],
@@ -40,25 +45,28 @@
       width: 100%;
       padding: 10px;
       margin: 8px 0 16px;
-      border: 1px solid #ccc;
+      border: none;
       border-radius: 8px;
+      background: rgba(255,255,255,0.9);
       box-sizing: border-box;
     }
 
     button {
       width: 100%;
-      background-color: #003366;
-      color: white;
+      background-color: #ffcc00;
+      color: #003366;
       padding: 10px;
       border: none;
       border-radius: 8px;
       font-size: 16px;
+      font-weight: bold;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
     }
 
     button:hover {
-      background-color: #005599;
+      background-color: #e6b800;
+      transform: scale(1.02);
     }
 
     .register-link {
@@ -67,8 +75,9 @@
     }
 
     .register-link a {
-      color: #003366;
+      color: #ffcc00;
       text-decoration: none;
+      font-weight: bold;
     }
 
     .register-link a:hover {
