--- a/register.html
+++ b/register.html
@@ -7,32 +7,39 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('login.png') no-repeat center center fixed;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+                  url('login.png') no-repeat center center fixed;
       background-size: cover;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
     }
 
     .overlay {
-      backdrop-filter: blur(6px);
-      background-color: rgba(255, 255, 255, 0.85);
+      backdrop-filter: blur(10px);
+      background: rgba(255, 255, 255, 0.15);
+      border: 1px solid rgba(255, 255, 255, 0.3);
       padding: 40px;
-      border-radius: 15px;
-      width: 380px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+      border-radius: 20px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
+      width: 400px;
+      color: white;
     }
 
     h2 {
       text-align: center;
-      color: #003366;
+      color: #ffffff;
       margin-bottom: 25px;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
     }
 
     label {
       font-weight: bold;
-      color: #003366;
+      color: #ffffff;
+      display: block;
+      margin-bottom: 5px;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
     }
 
     input[type="text"],
@@ -40,31 +47,36 @@
     input[type="password"] {
       width: 100%;
       padding: 10px;
-      margin: 8px 0 16px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-sizing: border-box;
-    }
-
-    button {
-      width: 48%;
-      background-color: #003366;
-      color: white;
-      padding: 10px;
+      margin-bottom: 16px;
       border: none;
       border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-
-    button:hover {
-      background-color: #005599;
+      background: rgba(255,255,255,0.9);
+      box-sizing: border-box;
+      font-size: 14px;
     }
 
     .button-group {
       display: flex;
       justify-content: space-between;
+      margin-top: 10px;
+    }
+
+    button {
+      width: 48%;
+      background-color: #ffcc00;
+      color: #003366;
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #e6b800;
+      transform: scale(1.05);
     }
 
     .login-link {
@@ -73,7 +85,8 @@
     }
 
     .login-link a {
-      color: #003366;
+      color: #ffcc00;
+      font-weight: bold;
       text-decoration: none;
     }
 
