--- a/left.html
+++ b/left.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Left Frame</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    /* Body with blurred background image */
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -11,10 +12,9 @@
       background-size: cover;
     }
 
-    /* Overlay to blur the background */
     .overlay {
-      backdrop-filter: blur(6px); /* Blur effect */
-      background-color: rgba(255, 255, 255, 0.6); /* Semi-transparent white */
+      backdrop-filter: blur(6px);
+      background-color: rgba(255, 255, 255, 0.7);
       padding: 20px;
       height: 100vh;
       box-sizing: border-box;
@@ -23,18 +23,20 @@
     h3 {
       color: #003366;
       text-align: center;
-      font-size: 24px;
-      margin-bottom: 20px;
-      text-shadow: 1px 1px 2px #ccc;
+      font-size: 26px;
+      margin-bottom: 25px;
+      border-bottom: 2px solid #003366;
+      padding-bottom: 10px;
     }
 
     ul {
-      list-style-type: none;
+      list-style: none;
       padding: 0;
+      margin: 0;
     }
 
     li {
-      margin: 15px 0;
+      margin: 18px 0;
       text-align: center;
     }
 
@@ -42,12 +44,18 @@
       text-decoration: none;
       font-size: 18px;
       color: #003366;
-      padding: 10px 20px;
+      padding: 12px 20px;
       border: 2px solid #003366;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-      display: inline-block;
+      border-radius: 10px;
       background-color: #e6f2ff;
+      transition: all 0.3s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    a i {
+      font-size: 18px;
     }
 
     a:hover {
@@ -59,12 +67,13 @@
 </head>
 <body>
   <div class="overlay">
-    <h3>Categories</h3>
+    <h3>📚 Categories</h3>
     <ul>
-      <li><a href="cse.html" target="rightFrame">CSE</a></li>
-      <li><a href="ece.html" target="rightFrame">ECE</a></li>
-      <li><a href="eee.html" target="rightFrame">EEE</a></li>
-      <li><a href="civil.html" target="rightFrame">CIVIL</a></li>
+      <li><a href="cse.html" target="rightFrame"><i class="fas fa-laptop-code"></i> CSE</a></li>
+      <li><a href="ece.html" target="rightFrame"><i class="fas fa-microchip"></i> ECE</a></li>
+      <li><a href="eee.html" target="rightFrame"><i class="fas fa-bolt"></i> EEE</a></li>
+      <li><a href="civil.html" target="rightFrame"><i class="fas fa-drafting-compass"></i> CIVIL</a></li>
+     
     </ul>
   </div>
 </body>
